--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -1,7 +1,7 @@
 /* Design tokens (can be mapped to Figma later) */
 :root {
   /* Colors */
-  --color-bg: #0f0f12;
+  --color-bg: #202020;
   --color-surface: #1a1b20;
   --color-surface-2: #232530;
   --color-text: #e8e8ea;
